memperbaiki url gambar

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <div class="gallery">
             <div class="main">
                 <h2 id="gallery">All Memories We Have</h2>
-                <a href=""><img src="/img/main1.jpg"></a>
-                <a href=""><img src="/img/main2.jpg"></a>
-                <a href=""><img src="/img/main3.jpg"></a>
-                <a href=""><img src="/img/main4.jpg"></a>
-                <a href=""><img src="/img/main5.jpg"></a>
-                <a href=""><img src="/img/main6.jpg"></a>
-                <a href=""><img src="/img/main7.jpg"></a>
-                <a href=""><img src="/img/main8.jpg"></a>
-                <a href=""><img src="/img/main9.jpg"></a>
-                <a href=""><img src="/img/main10.jpg"></a>   
-                <a href=""><img src="/img/main11.png"></a>   
-                <a href=""><img src="/img/main12.png"></a>
-                <a href=""><img src="/img/main13.png"></a>
+                <a href=""><img src="img/main1.jpg"></a>
+                <a href=""><img src="img/main2.jpg"></a>
+                <a href=""><img src="img/main3.jpg"></a>
+                <a href=""><img src="img/main4.jpg"></a>
+                <a href=""><img src="img/main5.jpg"></a>
+                <a href=""><img src="img/main6.jpg"></a>
+                <a href=""><img src="img/main7.jpg"></a>
+                <a href=""><img src="img/main8.jpg"></a>
+                <a href=""><img src="img/main9.jpg"></a>
+                <a href=""><img src="img/main10.jpg"></a>   
+                <a href=""><img src="img/main11.png"></a>   
+                <a href=""><img src="img/main12.png"></a>
+                <a href=""><img src="img/main13.png"></a>
                 <div class="comming1">
                     <h3>can be added if you want</h3>
                 </div>
@@ -46,11 +46,11 @@
                 <div class="comming3"></div>
             </div>
             <div class="side" id="about">
-                <a href=""><img src="/img/1.jpg"></a>
-                <a href=""><img src="/img/2.png"></a>
-                <a href=""><img src="/img/3.png"></a>
-                <a href=""><img src="/img/4.png"></a>
-                <a href=""><img src="/img/5.png"></a>  
+                <a href=""><img src="img/1.jpg"></a>
+                <a href=""><img src="img/2.png"></a>
+                <a href=""><img src="img/3.png"></a>
+                <a href=""><img src="img/4.png"></a>
+                <a href=""><img src="img/5.png"></a>  
                 <div class="quote">
                     <h4>It seems like something is missing here, right?</h4>
                 </div>
